# ttr-client-incubator

./: .gitignore  README.md
test-client-dart/: pubspec.yaml
test-client-dart/lib/protos/: IM.BaseDefine.pb.dart  IM.BaseDefine.pbenum.dart  IM.BaseDefine.pbjson.dart  IM.BaseDefine.pbserver.dart  IM.Buddy.pb.dart  IM.Buddy.pbenum.dart  IM.Buddy.pbjson.dart  IM.Buddy.pbserver.dart  IM.File.pb.dart  IM.File.pbenum.dart  IM.File.pbjson.dart  IM.File.pbserver.dart  IM.Group.pb.dart  IM.Group.pbenum.dart  IM.Group.pbjson.dart  IM.Group.pbserver.dart  IM.Login.pb.dart  IM.Login.pbenum.dart  IM.Login.pbjson.dart  IM.Login.pbserver.dart  IM.Message.pb.dart  IM.Message.pbenum.dart  IM.Message.pbjson.dart  IM.Message.pbserver.dart  IM.Other.pb.dart  IM.Other.pbenum.dart  IM.Other.pbjson.dart  IM.Other.pbserver.dart  IM.Server.pb.dart  IM.Server.pbenum.dart  IM.Server.pbjson.dart  IM.Server.pbserver.dart  (+4 more)
test-client-rust/: Cargo.toml  build.rs
test-client-rust/protobuf/: IM.BaseDefine.proto
test-client-rust/src/: main.rs
test-client-rust/src/communicator/client/: mod.rs
test-client-rust/src/protos/: IM_BaseDefine.rs  IM_Buddy.rs  IM_File.rs  IM_Group.rs  IM_Login.rs  IM_Message.rs  IM_Other.rs  IM_Server.rs  IM_SwitchService.rs  mod.rs
test-client-typescript/: gulpfile.js  package-lock.json  package.json  tsconfig.json
test-client-typescript/src/: main.ts
ttr-desktop-electron/: package.json
ttr-desktop-electron/src/: main.ts
ttr-mobile-flutter/: README.md  pubspec.yaml
ttr-mobile-flutter/test/: widget_test.dart
ttr-mobile-react-native/: package.json
(+45 files in other folders)
