[package]
name = "ttr-communicator"
version = "0.1.0"
authors = ["Yuxiang Zhu <yuxzhu@redhat.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "ttrcomm"
crate-type = ["rlib", "cdylib", "staticlib"]

[dependencies]
reqwest = "0.9.18"
serde = "1"
serde_json = "1"
byteorder = "1"
protobuf = { version = "2", features = ["with-bytes"] }
rust-crypto = "^0.2"
# nom = "5"
# tokio = "0.1.22"

[build-dependencies]
protoc-rust = "2"
glob = "0.3.0"
log = "0.4.7"
env_logger = "0.6.2"
